--- a/index.html
+++ b/index.html
@@ -129,8 +129,28 @@
        
         </section>
     </main>
-    <footer>
-        
+    <footer class="secondary-bg">
+        <div class="footer-coloumn">
+            <h3 class="section-title">Lets Connect</h3>
+            <p class="dark-2">Please fill out the form on this section to contact with me or call between 9:00 A.M and 8.00 P.M ET, Monday through Friday.</p>
+            <div>
+                <a href=""><img src="images/icons/facebook.png" alt=""></a>
+                <a href=""><img src="images/icons/twitter.png" alt=""></a>
+                <a href=""><img src="images/icons/insta.png" alt=""></a>
+            </div>
+        </div>
+        <div class="footer-coloumn">
+            <h3 class="section-title">Let’s Message me</h3>
+            <form action="">
+                <input type="text" name="name" id="" placeholder="your name">
+                <input type="email" name="email" id="" placeholder="your email">
+                <textarea name="" id="" cols="30" rows="10" placeholder="message"></textarea>
+                <div class="btn-submit">
+
+                    <input class="btn" type="submit" value="submit">
+                </div>
+            </form>
+        </div>
     </footer>
 </body>
 </html>
