--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                 <div class="skill">
                     <img src="images/icons/mongo.png" alt="">
                     <h4>MongoDB</h4>
-                    <p class=" section-description skill-description">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                    <p class=" section-description skill-description">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula egt dolor.</p>
                 </div>
             </div>
         </section>
